deployment/kubernetes/web-explorer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-explorer-backend
  name: web-explorer-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-explorer-backend
  template:
    metadata:
      labels:
        app: web-explorer-backend
    spec:
      containers:
        - name: web-explorer-backend
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          image: 667950714614.dkr.ecr.us-east-1.amazonaws.com/web-explorer-service:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
