deployment/kubernetes/web-explorer-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-explorer-backend
  name: web-explorer-backend
spec:
  selector:
    app: web-explorer-backend
  ports:
    - port: 80
      name: http
      targetPort: 3000
