deployment/kubernetes/web-explorer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-explorer-backend
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-prod"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - web-explorer.totem.gdn
      secretName: web-explorer.totem.gdn-tls
  rules:
    - host: web-explorer.totem.gdn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-explorer-backend
                port:
                  number: 443
